--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <title>Segundo projeto</title>
+    <title>Mecânica</title>
   </head>
   <body>
     <!-- aqui fica o banner-->
